cleanup in dashboard routes

--- a/msee-website/app/views/layouts/application.html.haml
+++ b/msee-website/app/views/layouts/application.html.haml
@@ -98,8 +98,8 @@
               %a{"href" => "/"} Home
             %br
             %a{"href" => "/about"} About
-            %br
-            %a{"href" => "/msee"} MSEE
+            -#    %br
+            -#    %a{"href" => "/msee"} MSEE
             %br
             %a{"href" => "http://redmine.sesa.sti2.at/projects/sesa-msee", "target" => "_blank"} Development
             %br
@@ -122,7 +122,7 @@
           .span2{"align" => "right"}
             %br
           .span2{"align" => "right"}
-            &copy; 2012
+            &copy; 2013
             %a{"href" => "http://www.sti-innsbruck.at", "target" => "_blank"} STI Innsbruck
             %br
             All rights reserved
