CLOSED - task 85: Update of dashboard http://redmine.sesa.sti2.at/issues/show/85

--- a/msee-website/app/assets/stylesheets/application.css
+++ b/msee-website/app/assets/stylesheets/application.css
@@ -26,5 +26,5 @@ div.hero-unit {
     box-shadow: 10px 10px 5px lightblue;
 
     -moz-border-radius: 15px;
-    border-radius: 45px;
+    /*border-radius: 45px;*/
 }
