changed release site

--- a/msee-website/app/views/release/index.html.haml
+++ b/msee-website/app/views/release/index.html.haml
@@ -2,17 +2,17 @@
   %div{"align" => "center"}
     %h1 Release
 
-  %h2 Version 1.0 (MSEE)
+  %h2 m17.1 release (MSEE)
   %p{"align" => "justify"}
     Initial release with the following components:
     %ul
       %li
-        %a{"href" => "http://sesa.sti2.at:8080/monitoring-webservice/services", "target" => "_blank"} Monitoring
-        %a{"href" => "http://sesa.sti2.at:8080/monitoring-webservice/services/management?wsdl", "target" => "_blank"} (WSDL)
+        %a{"href" => "http://sesa.sti2.at:8080/registration-webservice/services", "target" => "_blank"} Registration
+        %a{"href" => "http://sesa.sti2.at:8080/registration-webservice/services/register?wsdl", "target" => "_blank"} (WSDL)
       %li
-        %a{"href" => "http://sesa.sti2.at:8080/ranking-webservice/services", "target" => "_blank"} Ranking
-        %a{"href" => "http://sesa.sti2.at:8080/ranking-webservice/services/ranking?wsdl", "target" => "_blank"} (WSDL)
+        %a{"href" => "http://sesa.sti2.at:8080/discovery-webservice/services", "target" => "_blank"} Discovery
+        %a{"href" => "http://sesa.sti2.at:8080/discovery-webservice/services/discovery?wsdl", "target" => "_blank"} (WSDL)
 
   %p
     Source Code:
-    %a{"href" => "http://redmine.sesa.sti2.at/projects/sesa-efreight/repository/show?rev=sesa-project-1.0", "target" => "_blank"} Snapshot v1.0
+    %a{"href" => "http://redmine.sesa.sti2.at/projects/sesa/repository?utf8=%E2%9C%93&rev=m17.1", "target" => "_blank"} m17.1 release
