--- a/msee-website/app/views/release/index.html.haml
+++ b/msee-website/app/views/release/index.html.haml
@@ -9,6 +9,9 @@
       %li
         %a{"href" => "http://sesa.sti2.at:8080/registration-webservice/services", "target" => "_blank"} Registration
         %a{"href" => "http://sesa.sti2.at:8080/registration-webservice/services/register?wsdl", "target" => "_blank"} (WSDL)
+        %b
+      %ul
+        =link_to 'Example WSDL File', '/wsdl/00-all.wsdl'
       %li
         %a{"href" => "http://sesa.sti2.at:8080/discovery-webservice/services", "target" => "_blank"} Discovery
         %a{"href" => "http://sesa.sti2.at:8080/discovery-webservice/services/discovery?wsdl", "target" => "_blank"} (WSDL)
@@ -16,3 +19,4 @@
   %p
     Source Code:
     %a{"href" => "http://redmine.sesa.sti2.at/projects/sesa/repository?utf8=%E2%9C%93&rev=m17.1", "target" => "_blank"} m17.1 release
+
