IN PROGRESS - task 95: Remove references to Efreight from MSEE dashboard  http://redmine.sesa.sti2.at/issues/show/95

--- a/dashboard/app/views/doc/_navigation.html.haml
+++ b/dashboard/app/views/doc/_navigation.html.haml
@@ -14,26 +14,26 @@
 
       %li.nav-header Components
       %li
-        %a{"href" => ""}
+        %a{"href" => "#repository"}
           %i{"class" => "icon-tag"}
           Repository
       %li
-        %a{"href" => ""}
+        %a{"href" => "#management"}
           %i{"class" => "icon-tag"}
           Management
       %li
-        %a{"href" => ""}
+        %a{"href" => "#registration"}
           %i{"class" => "icon-tag"}
           Registration
       %li
-        %a{"href" => ""}
+        %a{"href" => "#discovery"}
           %i{"class" => "icon-tag"}
           Discovery
       %li
-        %a{"href" => ""}
+        %a{"href" => "#invocation"}
           %i{"class" => "icon-tag"}
           Invocation
       %li
-        %a{"href" => ""}
+        %a{"href" => "#grounding"}
           %i{"class" => "icon-tag"}
           Grounding
