--- a/dashboard/app/views/faq/index.html.haml
+++ b/dashboard/app/views/faq/index.html.haml
@@ -11,14 +11,15 @@
     you can use the following SOAP endpoints to access the single components.
     %ul
       %li
-        %a{"href" => "http://sesa.sti2.at:8080/registration-webservice", "target" => "_blank"} Registration Component
-        %a{"href" => "http://sesa.sti2.at:8080/registration-webservice/services/register?wsdl", "target" => "_blank"} (WSDL)
+        %a{"href" => "http://msee.sti2.at/registration-webservice/services", "target" => "_blank"} Registration Component
+        %a{"href" => "http://msee.sti2.at/registration-webservice/services/register?wsdl", "target" => "_blank"} (WSDL)
       %li
-        %a{"href" => "http://sesa.sti2.at:8080/discovery-webservice", "target" => "_blank"} Discovery Component
-        %a{"href" => "http://sesa.sti2.at:8080/discovery-webservice/services/discovery?wsdl", "target" => "_blank"} (WSDL)
-      %li
-        %a{"href" => "http://sesa.sti2.at:8080/invoker-webservice", "target" => "_blank"} Invocation Component (Invoker)
-        %a{"href" => "http://sesa.sti2.at:8080/invoker-webservice/services/invoker?wsdl", "target" => "_blank"} (WSDL)
+        %a{"href" => "http://http://msee.sti2.at/discovery-webservice", "target" => "_blank"} Discovery Component
+        %a{"href" => "http://msee.sti2.at/discovery-webservice/services/discovery?wsdl", "target" => "_blank"} (WSDL)
+      -#   
+        %li
+          %a{"href" => "http://sesa.sti2.at:8080/invoker-webservice", "target" => "_blank"} Invocation Component (Invoker)
+          %a{"href" => "http://sesa.sti2.at:8080/invoker-webservice/services/invoker?wsdl", "target" => "_blank"} (WSDL)
     To access SOAP services you can use your favorite development environment or for a first testing
     the graphical tool
     %a{"href" => "http://www.soapui.org/", "target" => "_blank"} SoapUI.
@@ -35,16 +36,15 @@
       You don't have to change your service in order to register it. The only thing that you must do is to
       change the WSDL file. The changed WSDL could be stored also on another host.
 
-  %h3 3. Where do I can find more information about SESA?
-  %p{"align" => "justify"}
-    As SESA is part of more than one project the documentation is separated over different deliverables and
-    technical documentations. A detailed description of the first version of the SESA platform you can find in
-    the e-Freight
-    %em Deliverable D2.4/D2.5 - e-Freight Semantic Registry and Repository / e-Freight SESA Platform (version 1)
 
-  %h3 4. Where do I can find the SESA source code?
+  %h3 3. Where do I can find more information about MSEE?
+  %p{"align" => "justify"}
+    Please have a look at the project website  
+    %a{"href" =>  "http://www.msee-ip.eu/project-overview", "target" => "_blank"} http://www.msee-ip.eu/project-overview
+
+  %h3 4. Where do I can find the MSEE source code?
   %p{"align" => "justify"}
     The current developer branch you can find in our internal
-    %a{"href" => "http://redmine.sesa.sti2.at/projects/sesa/repository", "target" => "_blank"} GIT Repository
+    %a{"href" => "http://redmine.sesa.sti2.at/projects/sesa-msee/repository", "target" => "_blank"} GIT Repository
 
   %hr
