In progress: Task 103

--- a/dashboard/app/views/dashboards/discoveries/index.html.haml
+++ b/dashboard/app/views/dashboards/discoveries/index.html.haml
@@ -44,7 +44,7 @@
           - if !@discover_output.nil?
             %span.label.label-info The discover response
             %pre.prettyprint.lang-xml
-              = raw @discover_output 
+              = @discover_output 
 
   %span12
     .accordion-group
