Finished task 113 (Discovery Lookup)

--- a/dashboard/app/views/dashboards/discoveries/index.html.haml
+++ b/dashboard/app/views/dashboards/discoveries/index.html.haml
@@ -30,7 +30,7 @@
           - if !@lookup_output.nil?
             %span.label.label-info The lookup response
             %pre.prettyprint.lang-xml
-              = raw @lookup_output     
+              = @lookup_output     
 
   %span12
     .accordion-group
@@ -58,4 +58,4 @@
           - if !@iserve_output.nil?
             %span.label.label-info The IServe Model response
             %pre.prettyprint.lang-xml
-              = raw @iserve_output         
+              = @iserve_output         
