create dashboard for invocation

--- a/dashboard/app/views/layouts/application.html.haml
+++ b/dashboard/app/views/layouts/application.html.haml
@@ -25,6 +25,7 @@
                   %li
                     %a{"href" => "/dashboards/registration"} <i class="icon-book"></i> Registration
                     %a{"href" => "/dashboards/discovery"} <i class="icon-book"></i> Discovery
+                    %a{"href" => "/dashboards/invocation"} <i class="icon-book"></i> Invocation
                     -#     %a{"href" => "/monitorings"} <i class="icon-book"></i> Monitoring
                     
               -# Only show to registered user
@@ -112,6 +113,8 @@
             %a{"href" => "/dashboards/registration"} Registration
             %br
             %a{"href" => "/dashboards/discovery"} Discovery
+            %br
+            %a{"href" => "/dashboards/invocation"} Invocation
             -# %br
             -# %a{"href" => "/monitorings"} Monitorings
           .span2
