--- a/dashboard/app/views/dashboards/discoveries/index.html.haml
+++ b/dashboard/app/views/dashboards/discoveries/index.html.haml
@@ -12,6 +12,8 @@
     .alert.alert-block.alert-success.fade.in
       %a.close{"data-dismiss" => "notice", "href" => "#" }
       = raw @notice
+  %pre.prettyprint.lang-xml
+      = raw @output
 
   .hero-unit
     %div{"align" => "left", "class" => "title"}
