added additional options for rules support in ranking

--- a/dashboard/app/views/monitorings/_rankings.html.erb
+++ b/dashboard/app/views/monitorings/_rankings.html.erb
@@ -10,6 +10,10 @@
         <%= @endpoints%>
     </li>
     
+        <%= @selectedendpoints %>
+        <%= @keys %>
+        <%= @values %>
+
     
     <li>
         <%= @results%>
