--- a/dashboard/app/views/monitorings/index.html.haml
+++ b/dashboard/app/views/monitorings/index.html.haml
@@ -16,7 +16,7 @@
     -if !@noticemon.nil?
       .alert.alert-block.alert-success.fade.in
         %a.close{"data-dismiss" => "notice", "href" => "#" }
-        = raw @errormon
+        = raw @noticemon
     -if !@outputmon.nil?
       %pre.prettyprint.lang-xml
       = raw @output
