minor web interface changes

--- a/dashboard/app/views/monitorings/_endpointdetails.html.erb
+++ b/dashboard/app/views/monitorings/_endpointdetails.html.erb
@@ -11,31 +11,11 @@
     </div>
     <div class="accordion-group">
         <div class="accordion-heading">
-            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree"> Inputs</a>
+            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo"> Details</a>
         </div>
         <div id="collapseTwo" class="accordion-body collapse">
             <div class="accordion-inner">
-                Input1 Input2 Intput3
-            </div>
-        </div>
-    </div>
-    <div class="accordion-group">
-        <div class="accordion-heading">
-            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour"> Output</a>
-        </div>
-        <div id="collapseThree" class="accordion-body collapse">
-            <div class="accordion-inner">
-                Output1 Output2 Output3
-            </div>
-        </div>
-    </div>
-    <div class="accordion-group">
-        <div class="accordion-heading">
-            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFive"> Faults</a>
-        </div>
-        <div id="collapseFour" class="accordion-body collapse">
-            <div class="accordion-inner">
-                No Faults until now
+                <div id="servicedetails"><%= render 'servicedetails' %></div>
             </div>
         </div>
     </div>
