--- a/dashboard/app/views/monitorings/_servicedetails.html.erb
+++ b/dashboard/app/views/monitorings/_servicedetails.html.erb
@@ -1,3 +1,13 @@
+
+<p> Outputs </p>
 <%= @serviceoutputs%>
+<p> Output Faults </p>
+<%= @serviceoutputsvaults %>
+
+<p> Inputs </p>
 <%= @serviceinputs %>
+<p> Input Faults: </p>
+<%= @serviceinputsvaults%>
+
+
 <%= @servicefaults %>
