--- a/dashboard/app/views/monitorings/_selectedqosparams.html.erb
+++ b/dashboard/app/views/monitorings/_selectedqosparams.html.erb
@@ -11,10 +11,10 @@ Select QoS Parameters:
 <% end %>
 
 
-<select class="selectpicker" multiple>
+<!-- <select class="selectpicker" multiple>
 	<% if @qosParamKeys then%>
 	<% for param in @qosParamKeys do%>
 	<option id="<%= param %>" name="<%= param %>" type="checkbox" value="1" ><%= param %></option>
 	<% end %>
-	<% end %>
+	<% end %> -->
 </select>
